--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
